===============================================================================
Change history for rutherford-scattering
===============================================================================

DONE:
6/24/08 - move SphericalNode to piccolo-phet
5/20/08 - call new PhetFont explicitly to create fonts
11/9/07 - move about.credits property to localization file
10/9/07 - migrate "Reset All" and "set minimum width" features to phetcommon ControlPanel
9/11/07 - rename AbstractControlPanel and AbstractModule to prevent name collisions with other sims
8/29/07 - replace RSWiggleMe with piccolo-phet DefaultWiggleMe
8/29/07 - replace JLabel().getFont() with PhetDefaultFont
******* version 1.01.00 (17033)
7/27/07 - new version published as part of new website deployment
7/10/07 - fix modules so that they don't explictly change the clock's run state unless the module is active
6/15/07 - convert description properties to well-formed HTML
4/23/07 - replace SliderControl with LinearValueControl from phetcommon
4/12/07 - merge test-src into src
4/7/07 - encapsulate PhetProjectConfig in RSResources
4/5/07 - set locale in Spanish JNLP file via javaws.locale property
4/5/07 - convert from SimStrings to PhetProjectConfig, pull all String and Image constants into RSConstants
4/5/07 - remove label from BoxOfAtomsNode
3/20/07 - remove DebugUtils and their single usage in AlphaParticles
3/20/07 - move DoubleRange, IntegerRange to phetcommon
******* version 1.00.00 (13862)
3/19/07 - rolled todays changes into 1.00
3/19/07 - refactor ModelEvent/ModelListener to ParticleEvent/ParticleListener
3/19/07 - flatten Model into RSModel to reduce complexity
3/19/07 - remove ModelViewManager framework to improve performance
3/15/07 - change thumbnail image
******* version 0.00.04 (13789)
3/15/07 - move ModelViewManager framework to its own package, target for replacement
3/15/07 - rename BoxOfHydrogenNode to BoxOfAtomsNode, reimplement tiny box
3/15/07 - add dashed line for electron orbit